CRUD operation working, but somehow redirection to index does not go through controller, therefore
undefined method `each' for nil:NilClass in index.html.erb

Perhaps redirection is not working.

--- a/app/views/person/show.html.erb
+++ b/app/views/person/show.html.erb
@@ -1,2 +1,9 @@
 <h1>Person#show</h1>
-<p>Find me in app/views/person/show.html.erb</p>
+<p>
+  <strong>Name:</strong>
+  <%= @person.name %>
+</p>
+<p>
+  <strong>Hobby:</strong>
+  <%= @person.hobby %>
+</p>
