--- a/app/views/person/edit.html.erb
+++ b/app/views/person/edit.html.erb
@@ -1,2 +1,15 @@
 <h1>Person#edit</h1>
-<p>Find me in app/views/person/edit.html.erb</p>
+
+<%= form_for(:person, :url => {:action => 'create'}) do |p| %>
+    <p>
+      <%= p.label :name %><br>
+      <%= p.text_field :name %>
+    </p>
+    <p>
+      <%= p.label :hobby %><br>
+      <%= p.text_field :hobby %>
+    </p>
+    <p>
+      <%= submit_tag("Update Person") %>
+    </p>
+<% end %>
