--- a/app/views/person/index.html.erb
+++ b/app/views/person/index.html.erb
@@ -2,18 +2,20 @@
 
 <table>
     <tr>
-        <th>Name</th>        
+        <th>Name</th>
+        <th>Hobby</th>
         <th colspan="2"></th>
     </tr>
     <% @persons.each do |person| %>
         <tr>
             <td><%= person.name %></td>
+            <td><%= person.hobby %></td>
             <td><%= link_to 'Show', person_path(person) %></td>
             <td><%= link_to 'Edit', edit_person_path(person) %></td>
             <td><%= link_to 'Destroy', person_path(person),
             method: :delete,
-            data: {confirm: 'Are you sure?'}  
-             %></td>            
+            data: {confirm: 'Are you sure?'}
+             %></td>
         </tr>
     <% end %>
 </table>
