--- a/app/views/person/new.html.erb
+++ b/app/views/person/new.html.erb
@@ -10,6 +10,6 @@
 	<%= p.text_field :hobby %>
 </p>
 <p>
-	<%= submit_tag("Create Subject") %>
+	<%= submit_tag("Create Person") %>
 </p>
 <% end %>
