Before changing person_controller to persons_controller

--- a/app/views/person/show.html.erb
+++ b/app/views/person/show.html.erb
@@ -7,3 +7,6 @@
   <strong>Hobby:</strong>
   <%= @person.hobby %>
 </p>
+
+<%= link_to 'Back', person_path %>
+<%= link_to 'Edit', edit_person_path(@person) %>
