After changing crud to match example. It works.

--- a/app/views/persons/new.html.erb
+++ b/app/views/persons/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create new Person</h1>
 
-<%= form_for(:person, :url => {:action => 'create'}) do |p| %>
+<%= form_for(@person, :url => {:action => 'create'}) do |p| %>
 <p>
 	<%= p.label :name %><br>
 	<%= p.text_field :name %>
