--- a/app/views/persons/show.html.erb
+++ b/app/views/persons/show.html.erb
@@ -8,5 +8,5 @@
   <%= @person.hobby %>
 </p>
 
-<%= link_to 'Back', person_path %>
+<%= link_to 'Back', persons_path %>
 <%= link_to 'Edit', edit_person_path(@person) %>
