--- a/app/views/persons/edit.html.erb
+++ b/app/views/persons/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Person#edit</h1>
 
-<%= form_for(:person, :url => {:action => 'create'}) do |p| %>
+<%= form_for(@person, :url => {:action => 'update'}) do |p| %>
     <p>
       <%= p.label :name %><br>
       <%= p.text_field :name %>
